[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprite/Store/Box/2.png" type="Texture" id=1]
[ext_resource path="res://Sprite/Store/Box/1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Healing_Station.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Food",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Empty",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58.2584, 61.6056 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.1931, 10.7196 )

[node name="Healing_Station" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Body" type="AnimatedSprite" parent="."]
scale = Vector2( 3.01035, 3 )
frames = SubResource( 1 )
animation = "Empty"

[node name="EntryRadius" type="Area2D" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/EntryRadius"]
shape = SubResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2( 2.79832, 3.1085 )
shape = SubResource( 3 )
disabled = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Body/EntryRadius" to="." method="_on_EntryRadius_body_entered"]
[connection signal="body_exited" from="Body/EntryRadius" to="." method="_on_EntryRadius_body_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
